...
        
        queue.addOperation(enableViewOperation)
    }
    
    func verifyColor(color: SimonColor) {
        if !simonModel.verifyColor(color) {
            let alert = UIAlertController(title: "Wrong!", message: "Incorrect! Final score is \(simonModel.score)", preferredStyle: .Alert)
            let alertAction = UIAlertAction(title: "OK", style: .Default, handler: { _ -> Void in
                self.dismissViewControllerAnimated(true, completion: nil)
            })
            alert.addAction(alertAction)
            presentViewController(alert, animated: true, completion: nil)
        } else {
            if simonModel.isRoundOver() {
...
